<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:background="@color/gray_color_bg"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x100"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tab_top1"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:gravity="center"
            android:text="@string/ranklist_tabs1"
            android:lines="1"
            android:textColor="@color/moderate_grey"
            android:textSize="@dimen/x26"
            android:background="@drawable/tab_top_noselect"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/x64"/>
        <TextView
            android:lines="1"
            android:id="@+id/tab_top2"
            android:layout_marginRight="@dimen/x20"
            android:gravity="center"
            android:text="@string/ranklist_tabs2"
            android:textColor="@color/moderate_grey"
            android:textSize="@dimen/x26"
            android:background="@drawable/tab_top_noselect"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/x64"/>

        <TextView
            android:lines="1"
            android:id="@+id/tab_top3"
            android:layout_width="0dp"
            android:layout_height="@dimen/x64"
            android:layout_marginRight="@dimen/x20"
            android:layout_weight="1"
            android:background="@drawable/tab_top_noselect"
            android:gravity="center"
            android:text="@string/ranklist_tabs3"
            android:textColor="@color/moderate_grey"
            android:textSize="@dimen/x26"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ranklist_content_ll"
        android:gravity="center"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x70"
        android:orientation="horizontal">
        <TextView
            android:lines="1"
            android:id="@+id/ranklist_content1"
            android:gravity="center"
            android:text="@string/ranklist_content1"
            android:textColor="@color/moderate_grey"
            android:textSize="@dimen/x28"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <TextView
            android:lines="1"
            android:id="@+id/ranklist_content2"
            android:gravity="center"
            android:text="@string/ranklist_content2"
            android:textColor="@color/moderate_grey"
            android:textSize="@dimen/x28"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <TextView
            android:lines="1"
            android:id="@+id/ranklist_content3"
            android:gravity="center"
            android:text="@string/ranklist_content3"
            android:textColor="@color/moderate_grey"
            android:textSize="@dimen/x28"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <TextView
            android:lines="1"
            android:id="@+id/ranklist_content4"
            android:gravity="center"
            android:text="@string/ranklist_content4"
            android:textColor="@color/moderate_grey"
            android:textSize="@dimen/x28"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>
